@@ -15,6 +15,7 @@ import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Function;
 
 import com.sun.net.httpserver.HttpServer;
 import com.sun.net.httpserver.HttpHandler;
@@ -56,8 +57,7 @@ public class PubSubClientTest {
         server.createContext("/org/topics/topic/subscriptions/sub/events", exchange -> {
             if (exchange.getRequestMethod().equals("GET")) {
                 List<EventResponse> events = List.of(
-                        new EventResponse(UUID.randomUUID(), Map.of("message", "hello"), Instant.now())
-                );
+                        new EventResponse(UUID.randomUUID(), Map.of("message", "hello"), Instant.now()));
                 sendJson(exchange, 200, mapper.writeValueAsString(events));
             } else if (exchange.getRequestMethod().equals("POST")) {
                 sendJson(exchange, 200, "1");
@@ -66,7 +66,7 @@ public class PubSubClientTest {
         PubSubClient client = new PubSubClient(baseUrl);
         client.consumeEvents("org", "topic", "sub", 10, (events, commit) -> {
             Assertions.assertFalse(events.isEmpty());
-            int committed = commit.apply(List.of(events.getFirst().id()));
+            int committed = commit.apply(List.of(events.get(0).id()));
             Assertions.assertEquals(1, committed);
         });
     }
@@ -87,7 +87,7 @@ public class PubSubClientTest {
         });
 
         PubSubClient client = new PubSubClient(baseUrl);
-        EventsHandler handler = (events, commit) -> commit.apply(List.of(events.getFirst().id()));
+        EventsHandler handler = (events, commit) -> commit.apply(List.of(events.get().id()));
         PollingConsumerConfig cfg = new PollingConsumerConfig(
                 client,
                 "org",
